--- a/app/ParentJobPost.css
+++ b/app/ParentJobPost.css
@@ -24,12 +24,35 @@
     align-items: center;
 }
 
-.job-post-details *:nth-child(1){
+/* .job-post-details > *:nth-of-type(1){
     flex: 0 0 20%;
 }
 
-.job-post-details *:nth-child(2){
+.job-post-details > *:nth-of-type(2) {
     flex: 1 0 50%;
+} */
+
+ .fa-star{
+    color: grey;
+}
+
+.rating-active{
+    color: gold;
+}
+
+
+ul#reviewsDisplay {
+    padding: 0;
+    margin: 0;
+}
+
+ul#reviewsDisplay > * {
+    padding: 1rem;
+    margin: 0;
+}
+
+.ratings-button{
+    display: none;
 }
 
 .job-details-buttons button{
