--- a/app/Login.css
+++ b/app/Login.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url("https://use.typekit.net/nio8yxa.css");
+
+
 .login-container {
     margin-left: auto;
     margin-right: auto;
