--- a/app/Home.css
+++ b/app/Home.css
@@ -70,8 +70,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* height: 295px;
-    width: 272px; */
     background-color: rgba(16, 75, 158, 10%);
     border-radius: 30px;
 }
@@ -81,8 +79,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* height: 295px;
-    width: 272px; */
     background-color: rgba(255, 19, 81, 10%);
     border-radius: 30px;
 }
@@ -92,8 +88,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* height: 295px;
-    width: 272px; */
     background-color: rgba(255, 19, 81, 10%);
     border-radius: 30px;
 }
@@ -103,8 +97,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* height: 295px;
-    width: 272px; */
     background-color: rgba(16, 75, 158, 10%);
     border-radius: 30px;
 }
@@ -114,7 +106,7 @@
 }
 
 .second-section {
-    padding: 30px 100px;
+    padding: 30px;
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(2, 1fr);
@@ -128,15 +120,9 @@
     background-color: #79C9AE;
 }
 
-
-/* .review-main:nth-child(2),
-.review-main:nth-child(3) {
-    display: none;
-} */
-
 .para-name {
     padding: 10px;
-    color: white;
+    color: black;
 }
 
 .review-img {
@@ -145,11 +131,11 @@
 }
 
 .review-name {
-    color: white;
+    color: whitesmoke;
 }
 
 .review-para {
-    color: white;
+    color: whitesmoke;
 }
 
 .dot {
@@ -184,6 +170,7 @@
 }
 
 .content-div {
+    padding: 20px;
     margin-left: 10px;
 }
 
@@ -203,14 +190,21 @@
 }
 
 .fifth-section {
-    padding: 20px;
+    /* padding: 20px; */
     background-color: rgba(255, 19, 81, 10%);
     width: 100%;
 }
 
 .fifth-heading {
+    font-size: 20px;
     color: #104B9E;
     text-align: center;
+    font-weight: bold;
+    padding: 30px 30px 0 30px;
+}
+
+.para-4-link {
+    margin-top: 40px;
 }
 
 .feature-profile-div {
@@ -223,9 +217,15 @@
 }
 
 .featured-profile-img {
-    border-radius: 50px;
-    width: 350px;
-    height: 290px;
+    /* border-radius: 50px; */
+    width: 250px;
+    height: auto;
+}
+
+.featured-para {
+    margin: 0;
+    padding-bottom: 10px;
+    color: grey;
 }
 
 .sixth-section {
@@ -275,17 +275,87 @@
     .feature-profile-div:nth-child(3) {
         display: block;
     }
-    .main-fifth {
+    .product-containerr {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
+        gap: 30px;
+        padding: 10px;
     }
     .fifth-heading {
         padding: 30px;
     }
+    .featured-profile-img {
+        /* border-radius: 50px; */
+        width: 250px;
+        height: auto;
+    }
+    .content-div {
+        padding: 0 30px;
+        margin-left: 10px;
+    }
+    .second-section {
+        padding: 30px 100px;
+    }
 }
 
+.product {
+    position: relative;
+    overflow: hidden;
+    /* padding: 20px; */
+}
 
-/* img {
+.product-container {
+    background-color: #79C9AE;
+    padding: 0 10vw;
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    justify-items: center;
+    align-items: center;
+}
+
+.product-containerr {
+    /* background-color: rgba(255, 19, 81, 10%); */
+    padding: 0 10vw;
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    justify-items: center;
+    align-items: center;
+}
+
+.product-container::-webkit-scrollbar {
+    display: none;
+}
+
+.product-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    flex: 0 0 auto;
+    width: 250px;
+    height: 450px;
+    margin-right: 40px;
+}
+
+.product-image {
+    position: relative;
     width: 100%;
-} */
+    height: 350px;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.product-imagee {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
