--- a/app/Home.css
+++ b/app/Home.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 @import url("https://use.typekit.net/nio8yxa.css");
 
-
+body{
+    line-height: 1.5;
+}
 .first-section{
     padding: 6rem;
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/app/site-images/homepage-top.png');
@@ -17,6 +19,7 @@
     padding: 0;
     margin: 0;
     line-height: 1;
+    width: 25rem;
 }
 
 input[type='radio']:checked:after {
@@ -37,7 +40,7 @@ input[type='radio']:checked:after {
     border-radius: 20px;
 }
 
-.tt-search-box-input-container div svg{
+.tt-search-box-input-container div:nth-of-type(1) svg{
     background-color: #00ecae;
     margin: 0;
     height: 1.5rem;
@@ -51,4 +54,6 @@ input[type='radio']:checked:after {
 .tt-search-box-input-container div:nth-of-type(1){
     place-items: center;
     display: flex;
+    margin: 0;
+    padding: 0;
 }
